<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/contactUsActivity_toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/contactUsActivity_nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactUsActivity_toolbar"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/leway"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contactUsActivity_contactUsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactUsActivity_nameTextView"
        android:layout_marginLeft="26dp"
        android:paddingBottom="@dimen/dimen_4"
        android:paddingLeft="@dimen/dimen_8"
        android:paddingTop="@dimen/dimen_4"
        android:text="@string/phone_text"
        android:textColor="@color/colorAccent"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/contactUsActivity_phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactUsActivity_nameTextView"
        android:layout_toRightOf="@id/contactUsActivity_contactUsTitleTextView"
        android:paddingBottom="@dimen/dimen_4"
        android:paddingLeft="@dimen/dimen_8"
        android:paddingRight="@dimen/dimen_8"
        android:paddingTop="@dimen/dimen_4"
        android:text="@string/phone"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        android:textSize="16dp" />

    <ImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_below="@id/contactUsActivity_nameTextView"
        android:layout_toRightOf="@id/contactUsActivity_phoneTextView"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="onPhoneClick"
        android:src="@mipmap/call" />

    <TextView
        android:id="@+id/contactUsActivity_addressTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactUsActivity_contactUsTitleTextView"
        android:layout_marginLeft="26dp"
        android:paddingBottom="@dimen/dimen_4"
        android:paddingLeft="@dimen/dimen_8"
        android:paddingTop="@dimen/dimen_4"
        android:text="@string/address_text"
        android:textColor="@color/colorAccent"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/contactUsActivity_addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactUsActivity_contactUsTitleTextView"
        android:layout_toRightOf="@id/contactUsActivity_addressTitleTextView"
        android:paddingBottom="@dimen/dimen_4"
        android:paddingLeft="@dimen/dimen_8"
        android:paddingTop="@dimen/dimen_4"
        android:text="@string/address"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        android:textSize="16dp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/contactUsActivity_locationImageView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_below="@id/contactUsActivity_contactUsTitleTextView"
        android:layout_toRightOf="@id/contactUsActivity_addressTextView"
        android:background="?android:attr/selectableItemBackground"
        android:src="@mipmap/location"
        android:tint="#b41f17" />

    <TextView
        android:id="@+id/contactUsActivity_fbTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/contactUsActivity_addressTitleTextView"
        android:layout_alignStart="@+id/contactUsActivity_addressTitleTextView"
        android:layout_below="@+id/contactUsActivity_locationImageView"
        android:layout_marginTop="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dimen_4"
        android:paddingLeft="@dimen/dimen_8"
        android:paddingTop="@dimen/dimen_4"
        android:text="@string/fb"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/contactUsActivity_fbImageView"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_below="@id/contactUsActivity_locationImageView"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginLeft="@dimen/dimen_4"
        android:layout_toRightOf="@id/contactUsActivity_fbTitleTextView"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="onFaceBookClick"
        android:src="@mipmap/icon_fb" />

</RelativeLayout>