<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/productListAdapter_imageView"
            android:layout_width="56dp"
            android:layout_height="72dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/arrow_down" />

        <ImageView
            android:id="@+id/productListAdapter_addToCartTextView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/add_to_cart" />

        <TextView
            android:id="@+id/productListAdapter_priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/productListAdapter_addToCartTextView"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:text="60" />

        <TextView
            android:id="@+id/productListAdapter_priceTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_toLeftOf="@id/productListAdapter_priceTextView"
            android:text="@string/price"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/productListAdapter_sizeTextView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/productListAdapter_priceTitleTextView"
            android:layout_toStartOf="@+id/productListAdapter_priceTitleTextView"
            android:background="@drawable/circle_size"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:text="L" />

        <TextView
            android:id="@+id/productListAdapter_nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_toLeftOf="@id/productListAdapter_addToCartTextView"
            android:layout_toRightOf="@id/productListAdapter_imageView"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            tools:text="原味賣茶原味" />

        <LinearLayout
            android:id="@+id/productListAdapter_infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productListAdapter_nameTextView"
            android:layout_toRightOf="@id/productListAdapter_imageView"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productListAdapter_coldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_cold"
                android:gravity="center"
                android:text="@string/cold"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/productListAdapter_hotTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="@drawable/circle_hot"
                android:gravity="center"
                android:text="@string/hot"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/productListAdapter_sweetTextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/circle_sweet"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/sweet_fixed"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>